# SMTP-client

./: README.md  models.py  pyproject.toml  requirements.dev.txt  requirements.txt  settings.py  smtp.py  smtp_client.py  test_smtp_client.py
.github/workflows/: github-actions.yml
test_data/: test.csv
tests/: test_smtp_client.py
